made the frosted glass ui

--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
-		<h1 id="title">Calculator</h1>
 		<div id="calc">
 			<input type="text" id="display" value="0" disabled />
 			<div id="btnContainer">
-				<button class="btn opBtn" id="clearAll" onclick="clearAll()">AC</button>
-				<button class="btn opBtn" id="clearOne" onclick="clearOne()">C</button>
+				<button class="btn" id="clearAll" onclick="clearAll()">AC</button>
+				<button class="btn" id="clearOne" onclick="clearOne()">C</button>
 				<br />
 				<button class="btn numBtn" onclick="handleNumber('7')">7</button>
 				<button class="btn numBtn" onclick="handleNumber('8')">8</button>
